# blind_prophet

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
amnesiac/: config.py
amnesiac/collect/: __init__.py  runner.py  scraper.py
amnesiac/embed/: __init__.py  runner.py
amnesiac/forecast/: __init__.py  runner.py
amnesiac/forecast/personas/: __init__.py  (+5 more)
amnesiac/neuter/: __init__.py  config.py  cycle.py  holdout.py  judges.py  metrics.py  prompts.py  runner.py
amnesiac/preprocess/: __init__.py  processor.py
amnesiac/store/: __init__.py  db.py  embeddings.py  store.py
amnesiac/summarize/: retriever.py  runner.py  summarizer.py
config/: channels.yaml  params.yaml
notebooks/: 01_embedding_space.ipynb  01_embedding_space_patch.ipynb  02_summarize_smoke.ipynb  03_summaries_review.ipynb  04_neutering_iteration_smoke.ipynb  05_1_neutering_cycle_model_bench.ipynb  05_neutering_cycle.ipynb  06_holdout_identifiability_eval.ipynb  07_shock_prompt_ablation.ipynb
presentation/: macros.tex  main.tex
presentation/sections/: 00_title.tex  01_inflation_motivation.tex  02_inflation_expectations.tex  03_llm_emulation.tex  04_leakage.tex  05_pipeline.tex  06_corpus_overview.tex  07_eda_geometry.tex  07_rag_lead.tex  08_eda_geometry.tex  08_eda_topk.tex  09_eda_topk.tex  09_rag_lead.tex  10_rag_summarization.tex  11_neutering.tex  12_forecast_eval.tex  13_status.tex  14_thanks.tex
presentation/theme/: colors.tex  commands.tex
scripts/: build_eval.py  load_infom.py  run.py
tests/: test_collect.py  test_embeddings.py  test_preprocess.py  test_store.py
(+1 files in other folders)
