[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blind-prophet"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sqlite-vec",
    "typer",
    "telethon",
    "pydantic-settings",
    "httpx",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["amnesiac"]

[tool.pytest.ini_options]
pythonpath = ["."]
