[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blind-prophet"
version = "0.1.2"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "telethon",
    "pydantic-settings",
    "httpx",
    "openai",
    "pyyaml",
    "python-socks",
    "emoji",
    "razdel",
    "matplotlib"
]

[project.optional-dependencies]
vec = ["sqlite-vec"]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["amnesiac"]

[tool.pytest.ini_options]
pythonpath = ["."]
